# HISI-interface

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  REFACTORING_SUMMARY.md  advanced_interface.py  custom_index.html  custom_main.py  custom_time_control.js  demo.py  demo2.py  fastrtc_demo_with_custom_ui.py  fastrtc_server.py  index.html  model_selection_fastrtc.py  pyproject.toml  real_time_stream_handler.py  requirements.txt  slimer_whisper_online.py  style.css  whisper_online.py
asr_interface/: __init__.py
asr_interface/backends/: __init__.py  mlx_whisper_loader.py  registry.py  whisper_loader.py  whisper_online_processor.py  whisper_timestamped_loader.py
asr_interface/cli/: __init__.py  main.py
asr_interface/core/: __init__.py  config.py  protocols.py  store.py
asr_interface/handlers/: __init__.py  stream_handler.py
asr_interface/utils/: __init__.py  audio.py  turn_server.py
asr_interface/web/: __init__.py  server.py
docs/: CustomASRUsingOnlineWhisper.md  CustomRealtimeASRWithoutOnlineWhisper.md  INTEGRATION_GUIDE.md  README.md  whisper_timestamped.md
extended_readme/: CustomASRUsingOnlineWhisper.md  CustomRealtimeASRWithoutOnlineWhisper.md
legacy/: offline_asr_server.py  real_time_asr_protocols.py  real_time_asr_server.py  real_time_stream_handler.py  whisper_online.py
legacy/real_time_asr_backend/: backends_for_whisper_online.py  real_time_asr_protocols.py  slimer_whisper_online.py  whisper_online.py
real_time_asr_backend/: backends_for_whisper_online.py  slimer_whisper_online.py
scripts/: audio_file_script.js  audio_recording_script.js  custom_time_control.js  evaluation_script.js  migrate_to_new_structure.py  style.css  test.html  wavesurfers.js
tests/: __init__.py  conftest.py
utils/: turn_server.py
